--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <fragment 
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:configChanges="orientation"
+              android:orientation="horizontal"
+              android:baselineAligned="false">
+
+    <fragment
+        android:id="@+id/titles"
         class="jp.hw.and.fragment0.FragmentEx$TitlesFragment"
-        android:id="@+id/titles" 
-        android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
 </LinearLayout>
